film poster now saved with film id
